<resources>
    <string name="app_name">Tracker</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="featured_label">Featured</string>
    <string name="smartphonse_label">Smartphones</string>
    <string name="laptop_label">Laptop</string>
    <string name="tv_label">TV</string>
    <string name="camera_label">Camera</string>
    <string name="beauty_label">Beauty</string>
    <string name="appliances_label">Appliances</string>
    <string name="account_label">My Account</string>
    <string name="logo_content_description">Shrine Logo</string>

    <string name="filter_dialog">Sort By</string>
    <string name="filter_popular">Popular</string>
    <string name="filter_latest">Latest</string>
    <string name="filter_oldest">Oldest</string>
    <string name="go_to_website">Go to website</string>
    <string name="search_hint">Search product</string>
</resources>